<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="249dp"
        android:layout_height="142dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/robo_gallery_logo" />

    <EditText
        android:id="@+id/emailView"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/logo_img"
        app:layout_constraintStart_toStartOf="@+id/logo_img"
        app:layout_constraintTop_toBottomOf="@+id/logo_img" />

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailView"
        app:layout_constraintStart_toStartOf="@+id/emailView"
        app:layout_constraintTop_toBottomOf="@+id/emailView" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="290dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="#206DA0"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#F5EFEF"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>